--- a/Beginner Level/exercise-12.html
+++ b/Beginner Level/exercise-12.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Random Number</title>
 </head>
 <body>
+    <h1>Random Number</h1>
     <a href="../index.html">Homepage</a>
+    <div>Enter numbers a and b boundries of random number</div>
+    <input type="number" id="i1" inputmode="numeric">
+    <input type="number" id="i2" inputmode="numeric">
+    <button onclick="inp()">Generate</button>
+    <p id="p"></p>
+    <script src="exercise-12.js"></script>
 </body>
 </html>
