--- a/Beginner Level/exercise-2.html
+++ b/Beginner Level/exercise-2.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Reverse string</title>
 </head>
 <body>
+    <h1>Reverse string</h1>
     <a href="../index.html">Homepage</a>
+    <div>Write text: </div>
+    <input type="text" id="i">
+    <button onclick="handleRev()">Send</button>
+    <p id="p"></p>
+    <script src="exercise-2.js"></script>
 </body>
 </html>
