--- a/Beginner Level/exercise-4.html
+++ b/Beginner Level/exercise-4.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Celcius2Farenheit</title>
 </head>
 <body>
+    <h1>Celcius2Farenheit</h1>
     <a href="../index.html">Homepage</a>
+    <div>Enter temperature in C°</div>
+    <input type="number" id="i" oninput="update()">
+    <p id='p'></p>
+    <script src="exercise-4.js"></script>
 </body>
 </html>
