--- a/Beginner Level/exercise-8.html
+++ b/Beginner Level/exercise-8.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Factorial</title>
+    <style>
+        p {display: inline;}
+    </style>
 </head>
 <body>
+    <h1>Factorial</h1>
     <a href="../index.html">Homepage</a>
+    <div>Enter non-negative integer number</div>
+    <input type="text" id="i" inputmode="numeric" onkeypress="return isNumberKey(event)">
+    <p id='p'></p>
+    <br>
+    <button onclick="inp()">calculate</button>
+    <script src="exercise-8.js"></script>
 </body>
 </html>
