--- a/Beginner Level/exercise-9.html
+++ b/Beginner Level/exercise-9.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>FizzBuzz</title>
 </head>
 <body>
+    <h1>FizzBuzz</h1>
     <a href="../index.html">Homepage</a>
+    <p id='p'></p>
+    <script src="exercise-9.js"></script>
 </body>
 </html>
