--- a/Intermediate Level/exercise-10.html
+++ b/Intermediate Level/exercise-10.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fibonacci sequence</title>
 </head>
 <body>
+    <h1>Fibonacci sequence</h1>
     <a href="../index.html">Homepage</a>
+    <div>Enter integer number</div>
+    <input type="text" id="i" inputmode="numeric" onkeypress="return isNumberKey(event)">
+    <button onclick="Inp()">Check</button>
+    <p id="p"></p>
+    <script src="exercise-10.js"></script>
 </body>
 </html>
