--- a/Intermediate Level/exercise-11.html
+++ b/Intermediate Level/exercise-11.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Capitilize</title>
 </head>
 <body>
+    <h1>Capitilize</h1>
     <a href="../index.html">Homepage</a>
+    <div>Enter string</div>
+    <input type="text" id="i">
+    <button onclick="inp()">check</button>
+    <p id='p'></p>
+    <script src = "exercise-11.js"></script>
 </body>
 </html>
