--- a/Intermediate Level/exercise-2.html
+++ b/Intermediate Level/exercise-2.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Valid email</title>
 </head>
 <body>
+    <h1>Valid email</h1>
     <a href="../index.html">Homepage</a>
+    <div>Enter email</div>
+    <input id='i' type='text'>
+    <button onclick="inp()">check</button>
+    <script src="exercise-2.js"></script>
 </body>
 </html>
