--- a/Intermediate Level/exercise-6.html
+++ b/Intermediate Level/exercise-6.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Check anagrams</title>
 </head>
 <body>
+    <h1>Check anagrams</h1>
     <a href="../index.html">Homepage</a>
+    <div>Enter two strings</div>
+    <input type="text" id="i1">
+    <input type="text" id="i2">
+    <button onclick="inp()">check</button>
+    <p id='p'></p>
+    <script src = "exercise-6.js"></script>
 </body>
 </html>
