--- a/Beginner Level/exercise-15.html
+++ b/Beginner Level/exercise-15.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Date and time</title>
 </head>
 <body>
+    <h1>Date and time</h1>
     <a href="../index.html">Homepage</a>
+    <br>
+    <script src="exercise-15.js"></script>
 </body>
 </html>
