--- a/Beginner Level/exercise-7.html
+++ b/Beginner Level/exercise-7.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Count vowels</title>
 </head>
 <body>
+    <h1>Count vowels</h1>
     <a href="../index.html">Homepage</a>
+    <div>Enter text</div>
+    <input id='i' type="text">
+    <button onclick="inp()">count</button>
+    <p id='p'></p>
+    <script src="exercise-7.js"></script>
 </body>
 </html>
