--- a/Intermediate Level/exercise-5.html
+++ b/Intermediate Level/exercise-5.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Prime numbers</title>
 </head>
 <body>
+    <h1>Prime numbers</h1>
     <a href="../index.html">Homepage</a>
+    <p id='p'></p>
+    <script src="exercise-5.js"></script>
 </body>
 </html>
