--- a/Beginner Level/exercise-5.html
+++ b/Beginner Level/exercise-5.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Find maximum</title>
 </head>
 <body>
+    <h1>Max</h1>
     <a href="../index.html">Homepage</a>
+    <div>Enter valid array of numbers</div>
+    <div id='d1'>[ <button onclick="add('input1')">+</button> <span id="arrayInputs"></span> ]</div>
+    <button onclick="inp()">Find</button>
+    <p id='p'></p>
+    <script src="exercise-5.js"></script>
 </body>
 </html>
