--- a/Intermediate Level/exercise-7.html
+++ b/Intermediate Level/exercise-7.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Flatten nested array</title>
 </head>
 <body>
+    <h1>Flatten nested array</h1>
     <a href="../index.html">Homepage</a>
+    <div id='d1'>
+        [ <button onclick="addElement()">Add Element</button> <button onclick="addList()">Add List</button> <span id="arrayInputs"></span> ]
+    </div>
+    <button onclick="flattenArray()">Flatten Array</button>
+    <p id="result"></p>
+    <script src="exercise-7.js"></script>
 </body>
 </html>
