--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <a href="Beginner Level/exercise-10.html">exercise-10</a>
     <a href="Beginner Level/exercise-11.html">exercise-11</a>
     <a href="Beginner Level/exercise-12.html">exercise-12</a>
+    <a href="Beginner Level/exercise-13.html">exercise-13</a>
     <a href="Beginner Level/exercise-14.html">exercise-14</a>
     <a href="Beginner Level/exercise-15.html">exercise-15</a>
     <h2>Intermediate Level</h2>
