--- a/Beginner Level/exercise-10.html
+++ b/Beginner Level/exercise-10.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Basic calculator</title>
 </head>
 <body>
+    <h1>Calculator</h1>
     <a href="../index.html">Homepage</a>
+    <div>Enter valid mathematical exprresion using numbers + - * / ( )</div>
+    <input id='i' onkeypress="return isNumberKey(event)">
+    <button onclick="inp()">Calculate</button>
+    <p id='p'></p>
+    <script src="exercise-10.js"></script>
 </body>
 </html>
