--- a/Intermediate Level/exercise-1.html
+++ b/Intermediate Level/exercise-1.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sort array</title>
 </head>
 <body>
+    <h1>Sorting</h1>
     <a href="../index.html">Homepage</a>
+    <div>Enter valid array of numbers</div>
+    <div id='d1'>[ <button onclick="add('input1')">+</button> <span id="arrayInputs"></span> ]</div>
+    <button onclick="sort_ar()">Find</button>
+    <p id='p'></p>
+    <script src="exercise-1.js"></script>
+    <script src="../Beginner Level/exercise-5.js"></script>
 </body>
 </html>
