--- a/Beginner Level/exercise-10.html
+++ b/Beginner Level/exercise-10.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Calculator</h1>
     <a href="../index.html">Homepage</a>
-    <div>Enter valid mathematical exprresion using numbers + - * / ( )</div>
+    <div>Enter valid mathematical expression using numbers + - * / ( )</div>
     <input id='i' onkeypress="return isNumberKey(event)">
     <button onclick="inp()">Calculate</button>
     <p id='p'></p>
