--- a/Beginner Level/exercise-14.html
+++ b/Beginner Level/exercise-14.html
@@ -6,6 +6,13 @@
     <title>Remove duplicates from array</title>
 </head>
 <body>
+    <h1>Remove duplicates</h1>
     <a href="../index.html">Homepage</a>
+    <div>Enter valid array</div>
+    <div id='d1'>[ <button onclick="add('input1')">+</button> <span id="arrayInputs"></span> ]</div>
+    <button onclick="inp()">Remove</button>
+    <p id='p'></p>
+    
+    <script src="exercise-14.js"></script>
 </body>
 </html>
