--- a/Intermediate Level/exercise-12.html
+++ b/Intermediate Level/exercise-12.html
@@ -6,6 +6,13 @@
     <title>Find intersection of two arrays</title>
 </head>
 <body>
+    <h1>Find intersection</h1>
     <a href="../index.html">Homepage</a>
+    <div>Enter 2 valid arrays:</div>
+    <div id='d1'>[ <button onclick="add('input1', 'arrayInputs')">+</button> <span id="arrayInputs"></span> ]</div>
+    <div id='d2'>[ <button onclick="add('input1', 'arrayInputs2')">+</button> <span id="arrayInputs2"></span> ]</div>
+    <button onclick="find()">Find</button>
+    <p id='p'></p>
+    <script src="exercise-12.js"></script>
 </body>
 </html>
