--- a/Intermediate Level/exercise-13.html
+++ b/Intermediate Level/exercise-13.html
@@ -1,14 +1,14 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Throttle a function</title>
+    <title>Deep copy</title>
 </head>
 <body>
-    <h1>Throttling function</h1>
+    <h1>Deep copy</h1>
     <a href="../index.html">Homepage</a>
-    <p id="log"></p>
-    <script src="exercise-14.js"></script>
+    <p id='p'></p>
+    <script src="exercise-13.js"></script>
 </body>
 </html>
