--- a/Intermediate Level/exercise-8.html
+++ b/Intermediate Level/exercise-8.html
@@ -6,6 +6,14 @@
     <title>Get unique values</title>
 </head>
 <body>
+    <h1>Get unique values</h1>
     <a href="../index.html">Homepage</a>
+    <div>Enter valid array</div>
+    <div id='d1'>[ <button onclick="add('input1')">+</button> <span id="arrayInputs"></span> ]</div>
+    <button onclick="get()">Remove</button>
+    <p id='p'></p>
+    
+    <script src="../Beginner Level/exercise-14.js"></script>
+    <script src="exercise-8.js"></script>
 </body>
 </html>
