--- a/Intermediate Level/exercise-1.html
+++ b/Intermediate Level/exercise-1.html
@@ -10,7 +10,7 @@
     <a href="../index.html">Homepage</a>
     <div>Enter valid array of numbers</div>
     <div id='d1'>[ <button onclick="add('input1')">+</button> <span id="arrayInputs"></span> ]</div>
-    <button onclick="sort_ar()">Find</button>
+    <button onclick="sort_ar()">Sort</button>
     <p id='p'></p>
     <script src="exercise-1.js"></script>
     <script src="../Beginner Level/exercise-5.js"></script>
